crates/webfang_core/tests/behavioral/snapshots/behavioral__sitemap_url_scrapes_listed_urls.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
assertion_line: 43
expression: redacted
---
## 127.0.0.1/page-a.md
---
title: 'Document: [127.0.0.1]'
url: http://127.0.0.1:<PORT>/page-a
date: [DATE]
excerpt: Substantive content from sitemap page A, long enough to clear the fifty character minimum content guard comfortably.
---

## Page A

Substantive content from sitemap page A, long enough to clear the fifty character minimum content guard comfortably.
## 127.0.0.1/page-b.md
---
title: 'Document: [127.0.0.1]'
url: http://127.0.0.1:<PORT>/page-b
date: [DATE]
excerpt: Substantive content from sitemap page B, long enough to clear the fifty character minimum content guard comfortably.
---

## Page B

Substantive content from sitemap page B, long enough to clear the fifty character minimum content guard comfortably.
## export.jsonl
{"url":"http://127.0.0.1:<PORT>/page-a","timestamp_utc":"<TIMESTAMP>","title":"Document: [127.0.0.1]","content":"Page ASubstantive content from sitemap page A, long enough to clear the fifty character minimum content guard comfortably.","checksum_sha256":"cfc38f5598770aafa7a538a4c67968b54fd1f9f661e25ce2c6e5fcaf27fc3653","metadata_version":"2.1.0","content_length":122,"word_count":18,"reading_time":1,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Substantive content from sitemap page A, long enough to clear the fifty character minimum content guard comfortably."}}
{"url":"http://127.0.0.1:<PORT>/page-b","timestamp_utc":"<TIMESTAMP>","title":"Document: [127.0.0.1]","content":"Page BSubstantive content from sitemap page B, long enough to clear the fifty character minimum content guard comfortably.","checksum_sha256":"975e3dd42797a7af1414e632002e5bdeee3c5e62fa78ab8389c19e9b4c013620","metadata_version":"2.1.0","content_length":122,"word_count":18,"reading_time":1,"extra_metadata":{"domain":"127.0.0.1","excerpt":"Substantive content from sitemap page B, long enough to clear the fifty character minimum content guard comfortably."}}
