crates/webfang_core/tests/behavioral/snapshots/behavioral__slow_server_timeout_stderr.snap
---
source: crates/webfang_core/tests/behavioral/main.rs
expression: redacted
---
  <TIMESTAMP> ERROR <MODULE>: page scrape failed, error: error de red: <NET_ERR>, url: http://127.0.0.1:<PORT>/slow, stage: scrape, trace_id: "<TRACE_ID>"
    at <FILE>.rs:<LINE>

Failed to scrape http://127.0.0.1:<PORT>/slow: error de red: <NET_ERR>
No pages were successfully scraped
Error: No pages were successfully scraped
